# miniscreenshot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  Taskfile.dist.yaml
.github/workflows/: rust.yml
.task/checksum/: build
miniscreenshot/: Cargo.toml
miniscreenshot-desktop/: Cargo.toml
miniscreenshot-desktop/src/: lib.rs
miniscreenshot-mcp/: Cargo.toml
miniscreenshot-mcp/examples/: desktop_mcp_server.rs  portal_async_mcp_server.rs
miniscreenshot-mcp/src/: lib.rs
miniscreenshot-minifb/: Cargo.toml
miniscreenshot-minifb/examples/: minifb_scene_screenshot.rs
miniscreenshot-minifb/src/: lib.rs
miniscreenshot-portal/: Cargo.toml
miniscreenshot-portal/examples/: portal_async_scene_screenshot.rs  portal_scene_screenshot.rs
miniscreenshot-portal/src/: lib.rs
miniscreenshot-skia/: Cargo.toml
miniscreenshot-skia/examples/: skia_scene_screenshot.rs
miniscreenshot-skia/src/: lib.rs
miniscreenshot-softbuffer/: Cargo.toml
miniscreenshot-softbuffer/examples/: softbuffer_scene_screenshot.rs  softbuffer_winit_scene_screenshot.rs
miniscreenshot-softbuffer/src/: lib.rs
miniscreenshot-vello/: Cargo.toml
miniscreenshot-vello/examples/: vello_scene_screenshot.rs
miniscreenshot-vello/src/: lib.rs
miniscreenshot-wayland/: Cargo.toml
miniscreenshot-wayland/examples/: wayland_scene_screenshot.rs
miniscreenshot-wayland/src/: lib.rs
miniscreenshot-wgpu/: Cargo.toml
miniscreenshot-wgpu/examples/: wgpu_scene_screenshot.rs
miniscreenshot-wgpu/src/: lib.rs
miniscreenshot-winit/: Cargo.toml
miniscreenshot-winit/examples/: winit_scene_screenshot.rs
miniscreenshot-winit/src/: lib.rs
miniscreenshot-x11/: Cargo.toml
miniscreenshot-x11/examples/: x11_scene_screenshot.rs
miniscreenshot-x11/src/: lib.rs
miniscreenshot/examples/: core_scene_screenshot.rs
miniscreenshot/src/: lib.rs
