[workspace]
members = [
    "miniscreenshot",
    "miniscreenshot-softbuffer",
    "miniscreenshot-wgpu",
    "miniscreenshot-wayland",
    "miniscreenshot-skia",
    "miniscreenshot-vello",
    "miniscreenshot-x11",
    "miniscreenshot-portal",
    "miniscreenshot-minifb",
    "miniscreenshot-desktop",
    "miniscreenshot-mcp",
]
resolver = "2"
