[package]
name = "miniscreenshot-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing miniscreenshot Capture over streamable HTTP."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "mcp", "model-context-protocol"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }

rmcp = { version = "1.5", default-features = false, features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
] }

axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
miniscreenshot-desktop = { version = "0.2", path = "../miniscreenshot-desktop" }
miniscreenshot-portal = { version = "0.2", path = "../miniscreenshot-portal", default-features = false, features = ["tokio"] }
tempfile = "3"
png = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
