[package]
name = "miniscreenshot-portal"
version = "0.2.0"
edition = "2021"
description = "XDG Desktop Portal (ashpd) screenshot helper for the miniscreenshot ecosystem. Works on GNOME, KDE, and wlroots-based compositors, and inside Flatpak/Snap sandboxes."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "xdg", "portal", "ashpd", "wayland"]
categories = ["multimedia::images", "graphics", "os::linux-apis"]
readme = "../README.md"

[features]
# Default: tokio runtime + blocking API + async API (drop-in replacement shape).
default = ["tokio", "blocking"]

# Runtime selectors — pick exactly one. Mutually exclusive; a compile_error!
# in src/lib.rs enforces this. Both imply the `async` API surface.
tokio     = ["ashpd/tokio", "dep:tokio", "async"]
async-std = ["ashpd/async-std", "dep:async-std", "async"]

# API surfaces — independently toggleable.
blocking = []
async    = []

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }
ashpd          = { version = "0.11", default-features = false }
png            = "0.17"
tokio          = { version = "1", features = ["rt", "net", "time"], optional = true }
async-std      = { version = "1", optional = true }

[dev-dependencies]
tokio          = { version = "1", features = ["macros", "rt-multi-thread"] }
