[package]
name = "miniscreenshot-skia"
version = "0.1.0"
edition = "2021"
description = "Skia screenshot helper for the miniscreenshot ecosystem. Re-exports skia-safe."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "skia", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.1.0", path = "../miniscreenshot" }
skia-safe = "0.73"
