[package]
name = "miniscreenshot-skia"
version = "0.2.0"
edition = "2021"
description = "Skia screenshot helper for the miniscreenshot ecosystem. Re-exports skia-safe."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "skia", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }
skia-safe = "0.93"
