[package]
name = "miniscreenshot-softbuffer"
version = "0.2.0"
edition = "2021"
description = "softbuffer screenshot helper for the miniscreenshot ecosystem. Re-exports softbuffer."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "softbuffer", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }
softbuffer = "0.4"
winit = { version = "0.30", optional = true }

[features]
winit = ["dep:winit"]

[[example]]
name = "softbuffer_winit_scene_screenshot"
required-features = ["winit"]
