[package]
name = "miniscreenshot-vello"
version = "0.2.0"
edition = "2021"
description = "Vello screenshot helper for the miniscreenshot ecosystem. Re-exports vello."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "vello", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }
# NOTE: miniscreenshot-wgpu depends on wgpu = "28", which matches the wgpu
# version re-exported by vello = "0.8". Keep them in sync.
miniscreenshot-wgpu = { version = "0.2", path = "../miniscreenshot-wgpu" }
vello = "0.8"

[dev-dependencies]
pollster = "0.4"
