[package]
name = "miniscreenshot-wgpu"
version = "0.2.0"
edition = "2021"
description = "wgpu screenshot helper for the miniscreenshot ecosystem. Re-exports wgpu."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "wgpu", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]
readme = "../README.md"

[dependencies]
miniscreenshot = { version = "0.2", path = "../miniscreenshot" }
wgpu = "29"

[dev-dependencies]
pollster = "0.4"
