[package]
name = "miniscreenshot-winit"
version = "0.1.0"
edition = "2021"
description = "winit screenshot helper for the miniscreenshot ecosystem. Re-exports winit."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "winit", "screenshot-helper"]
categories = ["multimedia::images", "graphics"]

[dependencies]
miniscreenshot = { version = "0.1.0", path = "../miniscreenshot" }
winit = "0.30"
