[package]
name = "miniscreenshot"
version = "0.1.0"
edition = "2021"
description = "Core screenshot types: PNG/PPM/PGM encoding and file-saving utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunsided/miniscreenshot"
keywords = ["screenshot", "png", "ppm", "pgm", "image"]
categories = ["multimedia::images", "graphics"]

[dependencies]
png = "0.18"

[dev-dependencies]
tempfile = "3"
